; ModuleID = '/home/carl/AnghaBench/systemd/src/fuzz/extr_fuzz-ndisc-rs.c_icmp6_bind_router_solicitation.c'
source_filename = "/home/carl/AnghaBench/systemd/src/fuzz/extr_fuzz-ndisc-rs.c_icmp6_bind_router_solicitation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AF_UNIX = common dso_local global i32 0, align 4
@SOCK_STREAM = common dso_local global i32 0, align 4
@SOCK_CLOEXEC = common dso_local global i32 0, align 4
@SOCK_NONBLOCK = common dso_local global i32 0, align 4
@test_fd = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @icmp6_bind_router_solicitation(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @AF_UNIX, align 4
  %4 = load i32, i32* @SOCK_STREAM, align 4
  %5 = load i32, i32* @SOCK_CLOEXEC, align 4
  %6 = or i32 %4, %5
  %7 = load i32, i32* @SOCK_NONBLOCK, align 4
  %8 = or i32 %6, %7
  %9 = load i32*, i32** @test_fd, align 8
  %10 = call i64 @socketpair(i32 %3, i32 %8, i32 0, i32* %9)
  %11 = icmp sge i64 %10, 0
  %12 = zext i1 %11 to i32
  %13 = call i32 @assert_se(i32 %12)
  %14 = load i32*, i32** @test_fd, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 0
  %16 = load i32, i32* %15, align 4
  ret i32 %16
}

declare dso_local i32 @assert_se(i32) #1

declare dso_local i64 @socketpair(i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
